--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<title>Revenge of the Fallen</title>	
+<link rel="icon" href="icon.ico"; />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE" /> 
