--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>revang of da felen</title>	
+<title>RotF</title>	
 <link rel="icon" href="icon.ico"; />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -52,10 +52,13 @@ var requiredRevision = 0;
 
 <body>
 <center>
+<div id="stastus">
+<iframe frameborder="0"></iframe>
+</div>
 <div id="status">
 <iframe src="client.swf" quality="low" width="800"
-height="600" border="0" frameborder="0" scrolling="no" marginwidth="0"
-marginheight="0"></iframe>
+height="600" border="0" frameborder="1" scrolling="no" marginwidth="0"
+marginheight="0" align="middle"></iframe>
 </div>
 </div>
 </center>
