--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>RotF</title>	
-<link rel="icon" href="rfLogo.png"; />		
+<link rel="icon" href="rfLogo2.png"; />		
 <style type="text/css">
 		  html, body {
 				height: 100%;
